# studyPython

./: app.py  beecrowd_1003.py  beecrowd_1015.py  beecrowd_1021.py  beecrowd_1036.py  beecrowd_1040.py  beecrowd_1042.py  beecrowd_1045.py  beecrowd_1047.py  beecrowd_1048.py  beecrowd_1052.py  beecrowd_1059.py  beecrowd_1064.py  beecrowd_1070.py  beecrowd_1071.py  beecrowd_1079.py  beecrowd_1095.py  beecrowd_1098.py  beecrowd_1115.py  beecrowd_1117.py  pyproject.toml  tempCodeRunnerFile.py  y  y.pub
Dio/: dbapi.py  meu_banco.db
beecrowd/: beecrowd_1002.py  beecrowd_1038.py  beecrowd_1041.py  beecrowd_1049.py  beecrowd_1050.py  beecrowd_1060.py  beecrowd_1061.py  beecrowd_1065.py  beecrowd_1067.py  beecrowd_1072.py  beecrowd_1073.py  beecrowd_1074.py  beecrowd_1075.py  beecrowd_1078.py  beecrowd_1096.py  beecrowd_1097.py  beecrowd_1114.py
formacao_dio_python/: desafio_3.py
instance/: db.sqlite
migrations/versions/: e829680e24da_initial_migration.py
pj_flask/: db.py
pj_flask/src/controllers/: user.py
